fix contact active and add scrollbar

--- a/milestone-1-2/assets/css/style.css
+++ b/milestone-1-2/assets/css/style.css
@@ -7,7 +7,7 @@
 * side menu section 
 *****************************/
 aside {
-  width: 400px;
+  max-width: 400px;
   height: 100%;
   background-color: white;
 }
@@ -25,7 +25,7 @@ aside {
 }
 .user_icons i,
 .icons_active_contact i {
-  margin-right: 1rem;
+  margin-right: 1.2rem;
 }
 
 /* notification setup */
@@ -53,14 +53,39 @@ aside {
 .search .input-group-text {
   background-color: white;
   border-right: none;
+  border: 1px solid #f5f5f5;
 }
 .search input {
   border-left: none;
 }
+.search .form-control {
+  border: 1px solid #f5f5f5;
+  border-left: none;
+}
+
+.search i {
+  color: #b1b1b1;
+}
 
 /* contacts chat list */
+.contacts_chat {
+  height: calc(100% - 80px - 100px - 50px);
+  overflow-y: scroll;
+}
+
 .contact {
   height: 100px;
+  border-top: 2px solid #fafafa;
+}
+
+.contact.active {
+  background-color: #e9ebeb;
+}
+.contact:hover {
+  cursor: pointer;
+}
+.contact.no_active:hover {
+  background-color: rgba(144, 238, 144, 0.2);
 }
 
 .contacts_chat .last_message {
@@ -94,6 +119,7 @@ aside {
 .chat_contact {
   height: calc(100% - 160px);
   background-image: url("../img/mine.jpg");
+  overflow-y: scroll;
 }
 
 .sent_message {
@@ -130,4 +156,8 @@ aside {
   font-size: 1.7rem;
   color: #6b7376;
   margin: 0 1.5rem;
+}
+
+.new_message .form-control {
+  border: none;
 }
